fix: updated Dockerfile and backend config for Render

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,8 @@
 [alembic]
-script_location = backend/alembic
-sqlalchemy.url = postgresql+psycopg2://postgres:postgres@localhost:5432/sweeezy
+# path to migration scripts directory, relative to this ini file
+script_location = alembic
+# sqlalchemy.url is provided dynamically from env in env.py; leave blank to avoid conflicts
+sqlalchemy.url = 
 
 [loggers]
 keys = root,sqlalchemy,alembic
