fix: updated Dockerfile and backend config for Render

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
-# path to migration scripts directory, relative to this ini file
-script_location = alembic
+# path to migration scripts directory (absolute or relative to container workdir)
+script_location = backend/alembic
 # sqlalchemy.url is provided dynamically from env in env.py; leave blank to avoid conflicts
 sqlalchemy.url = 
 
